--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ Executable/.idea/
 Executable/cmake-build-debug/
 Enscript/.idea/
 *.iml
+Executable/cmake-build-debug-x64/
+Executable/cmake-build-debug-x86/
+Executable/cmake-build-release-x64/
+Executable/cmake-build-release-x86/
