--- a/Servicetemplates/C#/DayZServicePipelineTest/DayZServicePipelineTest/packages.config
+++ b/Servicetemplates/C#/DayZServicePipelineTest/DayZServicePipelineTest/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="3.1.0" targetFramework="net461" />
+  <package id="Fody" version="3.2.1" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="PropertyChanged.Fody" version="2.5.9" targetFramework="net461" />
   <package id="UnmanagedExports" version="1.2.7" targetFramework="net461" />
 </packages>
